--- a/index.html
+++ b/index.html
@@ -1,15 +1,59 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <title>Craft by kandi</title>
-        <link href="styles.css" rel="stylesheet">
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=BBH+Sans+Bogle&display=swap" rel="stylesheet">
-    </head>
-    <body>
-        <center>
-            <h1><u>Welcome!</u></h1>
-        </center>
-    </body>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Craft by Kandi</title>
+  <link rel="stylesheet" href="styles.css" />
+</head>
+<body>
+  <header>
+    <div class="container header-container">
+        <h1><u>Craft by Kandi</h1>
+        <nav>
+        <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">clay decorations</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Contact</a></li>
+        </ul></u>
+        </nav>
+    </div>
+    </header>
+
+  <section class="hero">
+    <div class="container">
+      <h2>Handmade with love</h2>
+    </div>
+  </section>
+
+  <section class="products">
+    <div class="container">
+      <h3>Clay decoration</h3>
+      <div class="product-grid">
+        <div class="product-card">
+          <img src="https://via.placeholder.com/200x200" alt="Clay hanging decopage disk" />
+          <h4>Decopage disk</h4>
+          <p>$15.00</p>
+        </div>
+        <div class="product-card">
+          <img src="https://via.placeholder.com/200x200" alt="Craft item 2" />
+          <h4>Macrame Wall Hanging</h4>
+          <p>$25.00</p>
+        </div>
+        <div class="product-card">
+          <img src="https://via.placeholder.com/200x200" alt="Craft item 3" />
+          <h4>Clay Plant Pot</h4>
+          <p>$18.00</p>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <footer>
+    <div class="container">
+      <p>&copy; 2025 Craft by Kandi. All rights reserved.</p>
+    </div>
+  </footer>
+</body>
 </html>
