--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <li><a href="#">Home</a></li>
             <li><a href="#">clay decorations</a></li>
             <li><a href="#">About</a></li>
-            <li><a href="#">Contact</a></li>
+            <li><a href="contact.html">Contact</a></li>
         </ul></u>
         </nav>
     </div>
@@ -29,28 +29,28 @@
 
   <section class="products">
     <div class="container">
-      <h3>Clay decoration</h3>
+      <h3>Clay decorations</h3>
       <div class="product-grid">
         <div class="product-card">
           <img src="https://via.placeholder.com/200x200" alt="Clay hanging decopage disk" />
           <h4>Decopage disk</h4>
-          <p>$15.00</p>
+          <p>£15.00</p>
         </div>
         <div class="product-card">
           <img src="https://via.placeholder.com/200x200" alt="Craft item 2" />
           <h4>Macrame Wall Hanging</h4>
-          <p>$25.00</p>
+          <p>£25.00</p>
         </div>
         <div class="product-card">
           <img src="https://via.placeholder.com/200x200" alt="Craft item 3" />
           <h4>Clay Plant Pot</h4>
-          <p>$18.00</p>
+          <p>£18.00</p>
         </div>
       </div>
     </div>
   </section>
 
-  <footer>
+  <footer style="position: fixed; bottom: 0; width: 100%;">
     <div class="container">
       <p>&copy; 2025 Craft by Kandi. All rights reserved.</p>
     </div>
