--- a/index.html
+++ b/index.html
@@ -3,57 +3,73 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Craft by Kandi</title>
+  <title>Happy Hands Hideaway</title>
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
-  <header>
-    <div class="container header-container">
-        <h1><u>Craft by Kandi</h1>
-        <nav>
-        <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="#">clay decorations</a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="contact.html">Contact</a></li>
-        </ul></u>
-        </nav>
-    </div>
-    </header>
 
-  <section class="hero">
-    <div class="container">
-      <h2>Handmade with love</h2>
-    </div>
-  </section>
+<header>
+  <!-- Logo + Text pinned top-left -->
+  <div class="logo-container">
+    <img src="logo.jpeg" alt="Happy Hands Hideaway logo">
+    <span class="logo-text">Happy Hands Hideaway</span>
+  </div>
 
-  <section class="products">
-    <div class="container">
-      <h3>Clay decorations</h3>
-      <div class="product-grid">
-        <div class="product-card">
-          <img src="https://via.placeholder.com/200x200" alt="Clay hanging decopage disk" />
-          <h4>Decopage disk</h4>
-          <p>£15.00</p>
-        </div>
-        <div class="product-card">
-          <img src="https://via.placeholder.com/200x200" alt="Craft item 2" />
-          <h4>Macrame Wall Hanging</h4>
-          <p>£25.00</p>
-        </div>
-        <div class="product-card">
-          <img src="https://via.placeholder.com/200x200" alt="Craft item 3" />
-          <h4>Clay Plant Pot</h4>
-          <p>£18.00</p>
-        </div>
+  <!-- Navigation on right -->
+  <div class="container header-container">
+    <nav>
+      <ul>
+        <li><a href="#">Home</a></li>
+        <li><a href="Socials.html">Socials</a></li>
+      </ul>
+    </nav>
+  </div>
+</header>
+
+<section class="hero">
+  <div class="container">
+    <h2>Handmade with love</h2>
+    <p>Earthy, joyful crafts made to last</p>
+  </div>
+</section>
+
+<section class="products">
+  <div class="container">
+    <h3>Clay Decorations</h3>
+
+    <div class="product-grid">
+      <div class="product-card">
+        <img src="https://via.placeholder.com/300x300" alt="Decoupage disk" />
+        <h4>Decoupage Disk</h4>
+        <p>£15.00</p>
+      </div>
+
+      <div class="product-card">
+        <img src="https://via.placeholder.com/300x300" alt="Macrame wall hanging" />
+        <h4>Macrame Wall Hanging</h4>
+        <p>£25.00</p>
+      </div>
+
+      <div class="product-card">
+        <img src="https://via.placeholder.com/300x300" alt="Clay plant pot" />
+        <h4>Clay Plant Pot</h4>
+        <p>£18.00</p>
+      </div>
+
+      <div class="product-card">
+        <img src="https://via.placeholder.com/300x300" alt="Clay ornament" />
+        <h4>Clay Ornament</h4>
+        <p>£12.00</p>
       </div>
     </div>
-  </section>
+  </div>
+</section>
 
-  <footer style="position: fixed; bottom: 0; width: 100%;">
-    <div class="container">
-      <p>&copy; 2025 Craft by Kandi. All rights reserved.</p>
-    </div>
-  </footer>
+<footer>
+  <div class="container">
+    <p>&copy; 2025 Happy Hands Hideaway. Handmade, not mass-made.</p>
+  </div>
+</footer>
+
 </body>
 </html>
