--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="style.css">
 
   <script>
     tailwind.config = {
@@ -38,7 +39,7 @@
   <!-- Hero -->
   <section class="bg-hero text-center py-16 px-4">
     <div class="max-w-[1100px] mx-auto">
-      <h2 class="text-[2.2rem] font-semibold mb-2">
+      <h2 class="text-[2.8rem] font-semibold mb-2">
         Happy Hands Hideaway
       </h2>
       <p class="text-[1.1rem]">
