mid size update

--- a/profile.html
+++ b/profile.html
@@ -15,6 +15,7 @@
 
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="responsive.css">
+  <link rel="icon" href="resources/favicon.ico" type="image/x-icon">
 
   <script>
     tailwind.config = {
@@ -65,45 +66,13 @@
                     shadow-[0_10px_25px_rgba(0,0,0,0.12)]"
             >
         </div>
-        <!-- Replace images/kandice.jpg with the image she sends -->
-      </div>
-
-      <!-- Artist Text -->
-      <div class="bg-white rounded-[20px] sm:rounded-[22px]
-            p-6 sm:p-8
-            shadow-[0_8px_20px_rgba(0,0,0,0.08)]
-            leading-relaxed text-[1rem] sm:text-[1.05rem]">
-        <h3 class="text-[1.4rem] sm:text-[1.6rem] font-medium mb-5 text-center">
-            Kandice
-        </h3>
-
-        <p class="mb-4">
-          I’m a mixed media artist who loves turning clay, upscaled materials,
-          and natural treasures into whimsical, joyful creations.
-        </p>
-
-        <p class="mb-4">
-          My work is inspired by the world around us — the beauty of nature,
-          the magic hidden in everyday moments, and the carefree curiosity
-          of childhood.
-        </p>
-
-        <p class="mb-4">
-          I love crafting pieces that make people smile, spark a sense of wonder,
-          and invite them to explore a little world of imagination.
-        </p>
-
-        <p>
-          Each sculpture, trinket, or mixed-media creation is my way of celebrating
-          playfulness, joy, and the simple pleasures that surround us.
-        </p>
       </div>
 
       <!-- Shop Link -->
       <div class="text-center mt-10 sm:mt-12 px-4">
         <a
             href="shop.html"
-            class="inline-block bg-accent text-white
+            class="inline-block bg-hero text-ink
                 px-10 py-3
                 rounded-[999px]
                 text-[0.95rem] sm:text-[1rem]
@@ -119,7 +88,7 @@
       <div class="text-center mt-8">
         <a
             href="socials.html"
-            class="inline-block bg-accent text-white
+            class="inline-block bg-hero text-ink
                 px-10 py-3
                 rounded-[999px]
                 text-[0.95rem] sm:text-[1rem]
