--- a/products/bunting.html
+++ b/products/bunting.html
@@ -13,6 +13,8 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="../style.css">
+  <link rel="stylesheet" href="../responsive.css">
+  <link rel="icon" href="../resources/favicon.ico" type="image/x-icon">
 
   <script>
     tailwind.config = {
